default ver1 set

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='CSS/main.css'>
     <script src='JS/jquery-3.7.1.min.js'></script>
 </head>
-<body>
+<body class="theme-default">
     <div id="app"></div>
     <script src='JS/xterminal.umd.js'></script>
     <script src='JS/main.js'></script>   
