--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src='JS/jquery-3.7.1.min.js'></script>
 </head>
 <body class="theme-default">
+    <canvas id="matrixCanvas"></canvas>
     <div id="app"></div>
     <script src='JS/xterminal.umd.js'></script>
     <script src='JS/main.js'></script>   
