--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel='stylesheet' href='CSS/xterminal.css'>
     <link rel='stylesheet' href='CSS/main.css'>
     <script src='JS/jquery-3.7.1.min.js'></script>
+    <
 </head>
 <body class="theme-default">
     <canvas id="matrixCanvas"></canvas>
     <div id="app"></div>
     <script src='JS/xterminal.umd.js'></script>
     <script src='JS/main.js'></script>   
+    <script src='JS/figlet.js'></script>   
 </body>
 </html>
