--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script src='JS/xterminal.umd.js'></script>
     <script src='JS/main.js'></script>   
     <script src='JS/figlet.js'></script>   
+    <lable class='hero'></lable>
 </body>
 </html>
