--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='CSS/xterminal.css'>
     <link rel='stylesheet' href='CSS/main.css'>
     <script src='JS/jquery-3.7.1.min.js'></script>
-    <link rel="icon" href="Assets/Fav-icon.png" type="image/x-icon">
+    <link rel="icon" href="Assets\fav-icon.png" type="image/png">
 </head>
 <body class="theme-default">
     <canvas id="matrixCanvas"></canvas>
