--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <script src='JS/xterminal.umd.js'></script>
     <script src='JS/main.js'></script>   
     <script src='JS/figlet.js'></script>   
-    <lable class='hero'></lable>
-</body>
+  
+    <label class='hero'></label>
+  
+    <script>
+      
+    </script>
+  </body>  
 </html>
