--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     <div id="app"></div>
     <script src='JS/xterminal.umd.js'></script>
     <script src='JS/main.js'></script>   
-    <script src='JS/figlet.js'></script>   
-  
-    <label class='hero'></label>
-  
-    <script>
-      
-    </script>
+    <script src='JS/figlet.js'></script>
+
+    <div id="popup">
+      <div class="hidden popup-titlebar">
+        <span id="pop-up-title" >&lt;Project Name&gt;</span>
+        <span class="popup-close" onclick="closePopup()">X</span>
+      </div>
+      <div id ="pop-up-disc"class="popup-content">"discription"</div>
+    </div>
+
   </body>  
 </html>
