--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='CSS/xterminal.css'>
     <link rel='stylesheet' href='CSS/main.css'>
     <script src='JS/jquery-3.7.1.min.js'></script>
-    <link rel="icon" href="Assets\fav-icon.png" type="image/png">
+    <link rel="icon" href="Assets\images\fav-icon.png" type="image/png">
 </head>
 <body class="theme-default">
     <canvas id="matrixCanvas"></canvas>
@@ -18,11 +18,11 @@
 
     <div id="popup">
       <div class="hidden popup-titlebar">
-        <span id="pop-up-title" >&lt;Project Name&gt;</span>
+        <span id="pop-up-title">&lt;Project Name&gt;</span>
         <span class="popup-close" onclick="closePopup()">X</span>
       </div>
-      <div id ="pop-up-disc"class="popup-content">"discription"</div>
-    </div>
+      <div id="pop-up-disc" class="popup-content">"description"</div>
+    </div>    
 
   </body>  
 </html>
